[package]
name = "hostless"
version = "0.0.0"
description = "Hostless"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["io", "stream", "api", "network", "file"]
categories = ["os", "rust-patterns", "filesystem", "network-programming", "command-line-interface"]
repository = "https://github.com/sunfishcode/hostless"
readme = "README.md"

[dependencies]

[badges]
maintenance = { status = "actively-developed" }
